@@ -20,3 +20,10 @@ N|25||POINT(26 30)
 E|2|2|25
 E|27|25|2
 Topology 'city_data' dropped
+tt2033.start|t
+tt2033|E1
+tt2033|N3
+tt2033|NC|1|POINT Z (0 0 0)
+tt2033|NC|2|POINT Z (0 2 1)
+tt2033|NC|3|POINT Z (0 1 1)
+tt2033.endTopology 't' dropped
