@@ -3,6 +3,7 @@ PostGIS 2.0.2
 
  * Bug Fixes *
 
+  - #2033, Fix adding a splitting point into a 2.5d topology (#2033)
   - #2025, Fix side location conflict at TopoGeo_AddLineString 
   - #1391, Errors during upgrade from 1.5
   - #1891, Use LDFLAGS environment when building liblwgeom
